src-ken&y/objects/Report_Item_Chunk__c.object
<CustomObject>
    <fields>
        <fullName>Async_Report_Completion_Time__c</fullName>
        <label>Async Report Completion Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Async_Report_Error__c</fullName>
        <label>Async Report Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Async_Report_Instance_Id__c</fullName>
        <label>Async Report Instance Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Async_Report_Requested_Time__c</fullName>
        <label>Async Report Requested Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Async_Report_Status__c</fullName>
        <label>Async Report Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Chunk_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Chunk Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Item__c</fullName>
        <label>Last Item</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Report_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Report Item</label>
        <referenceTo>Report_Item__c</referenceTo>
        <relationshipLabel>Report Item Chunks</relationshipLabel>
        <relationshipName>Report_Item_Chunks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Row_Count__c</fullName>
        <label>Row Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Section_Data_Status__c</fullName>
        <label>Section Data Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Records__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Records Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Report Item Chunk</label>
    <nameField>
        <label>Report Item Chunk Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Report Item Chunks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>